layout fix, scrollbars

--- a/css/main.css
+++ b/css/main.css
@@ -33,12 +33,24 @@
 }
 
 
+::-webkit-scrollbar {
+    background: transparent;
+}
+
+
+
+::-webkit-scrollbar-thumb {
+    background: rgba(57, 102, 248, 0.5);
+    -webkit-border-radius: 0 12px 12px 0;
+    border-radius: 0 12px 12px 0;
+} 
 
 
 /*grid container for whole page*/
 .container {
     width: 100vw;
     height: 100vh;
+    padding: 1%;
     position: fixed;
     display: grid;
     grid-template-columns: 2fr 8fr;
@@ -58,7 +70,8 @@
     position: relative;
     grid-template-rows: 6fr 2fr 1fr;
     animation: wlot 0.5s ease-out forwards;
-    margin: 1em 0 1em 1em;
+    height: 96%;
+    margin: 0 5% 0 0;
 }
 
 .left__column div {
@@ -160,14 +173,18 @@ display:table-cell;
 
 .right__column {
     left: -3000px;
-    max-height: fit-content;
     position: relative;
     animation: wlot 0.7s ease-out forwards;
     animation-delay: 0.4s;
-    margin: 1em;
     border-radius: 12px;
-   overflow: auto;
+    width: 98%;
+    height: 96vh;
+    overflow: auto;
+    margin: 0;
     background-color: rgba(255, 255, 255, 0.8);
+    scrollbar-color: rgba(57, 102, 248, 0.5) transparent;
+    scrollbar-width: thin;
+    scroll-behavior: smooth;
 }
 
 .right__column h1 {
@@ -221,6 +238,18 @@ display:table-cell;
 /*mobile version*/
 
 @media screen and (max-width:768px) {
+    
+    ::-webkit-scrollbar {
+        display: none;
+        background: none;
+    }
+    
+    ::-webkit-scrollbar-thumb {
+        display: none;
+        background: none;
+        -webkit-border-radius: none;
+        border-radius: none;
+    }
     
 .container {
     display: block;
@@ -396,8 +425,12 @@ display: none;
 
 .right__column {
     display: block;
-    margin: 0.2em;
-    height: 100%;
+    height: 99%;
+}
+
+.right__column h1 {
+    text-align: center;
+    border: none;
 }
 
 .right__column p {
