--- a/css/subcss/kontakt.css
+++ b/css/subcss/kontakt.css
@@ -1,50 +1,4 @@
 
-::-webkit-scrollbar {
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(57, 102, 248, 0.5);
-    -webkit-border-radius: 0.2em;
-    border-radius: 0.2em;
-} 
-
-
-.container {
-    width: 100%;
-    height: 100vh;
-    padding: 1%;
-}
-
-.left__column {
-    height: 96%;
-    margin: 0 5% 0 0;
-}
-
-.right__column--scroll {
-    left: -3000px;
-    height: 96%;
-    width: 95%;
-    margin: 0;
-    position: relative;
-    animation: wlot 0.7s ease-out forwards;
-    animation-delay: 0.4s;
-    border-radius: 12px;
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 0 0.6em;
-}
-
-.right__column {
-    height: 96vh;
-    overflow: auto;
-    margin: 0;
-    background-color: transparent;
-}
-
-
-
-
-
 /* Contact section */
 
 .right__column--middle {
@@ -62,60 +16,23 @@
 
 
 .contact__data td {
-    padding: 0.5em;  
+    padding: 0.3em;  
 }
 
-.contact__data tr:nth-child(4) td:nth-child(1) {
-    background-color: black;
+.contact__data tr:nth-child(4) td:nth-child(2) {
+    padding-top: 0;
 }
 
 
 @media screen and (max-width:768px) {
-    ::-webkit-scrollbar {
-        background: none;
-    }
-    
-    ::-webkit-scrollbar-thumb {
-        background: none;
-        -webkit-border-radius: none;
-        border-radius: none;
-    } 
-    
-    
-    .right__column--scroll {
-        padding: 0;
-        width: 98vw;
-        height: 99%;
-    }
-    
-    .right__column {
-        width: 100vw;
-        height: 100%;
-        
-    }
-
-
+   
     .right__column--middle {
-        display: block;
+        flex-direction: column;  
     }
 
-
-    .contact__data {
-        width: 100%;
-       overflow-wrap: break-word;
-       table-layout: auto;
+    .right__column--middle div:nth-child(2) {
+        margin: 3em 0 1em 0;
     }
-
-    .contact__data td {
-        padding: 0.5em 0.1em;  
-    }
-
-    .contact__data tr:nth-child(4) td:nth-child(1) {
-        padding: 4px;
-    }
-
-    .contact__data tr:nth-child(4) td:nth-child(1) img {
-        width: 100%;
-    }
-
+    
+   
 }
